src/Styles/index.scss
@import "../Styles/mixins";
@import url("./fonts.css");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

::selection {
  color: #fff;
  background-color: var(--dark-cyan-hover);
}

a::selection {
  background-color: rgba(135, 135, 135, .621);
  color: var(--white);
}

html {
  scroll-behavior: smooth;
  scrollbar-width: thin;
  scrollbar-color: var(--gray-purple) var(--extra-dark-blue);
}

body {
  background-color: var(--extra-dark-blue);
  color: var(--white);
  font-family: 'Roboto', sans-serif;
  padding-left: 292px;
  transition: padding .5s ease-in-out;
}

@include large {
  body {
    padding-left: 0;
  }
}

body.focusMode::-webkit-scrollbar {
  width: 0;
}

body.sidebarExtend {
  padding: 0;
}

li {
  list-style: none;
}

img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

button {
  outline: none;
  border: none;
}

p {
  font-size: 1.2rem;
  line-height: 1.4;
  text-wrap: balance;
}

main {
  min-height: calc(100vh - (100vh - 100%));
}

svg {
  @include center-x-y;
}

@include medium {
  p {
    font-size: 1rem;
  }
}

.container {
  width: 90%;
  margin: 0 auto;
}

@include medium {
  .container {
    width: 92%;
  }
}

.linkStyle1 {
  display: inline-block;
  text-decoration: none;
  position: relative;
  cursor: pointer;
  transition: color .3s;
  padding: 0;
  margin: 0 4px;
  color: var(--cyan-blue);
  outline: none;

  &:first-child {
    margin-left: 0;
  }

  &:focus-visible {
    outline: solid 2px var(--cyan-blue);
  }
}

.linkStyle1::before {
  content: '';
  position: absolute;
  left: -1px;
  bottom: -2px;
  width: calc(100% + 2px);
  height: 2px;
  background-color: var(--cyan-blue);
  transition: height .3s, opacity .2s .2s;
}

.linkStyle1:hover::before {
  height: calc(100% + 2px);
  opacity: .3;
  transition: height .2s, opacity .2s;
}

.skip-content {
  background-color: var(--extra-dark-blue);
  color: var(--white);
  text-decoration: none;
  border-radius: 6px;
  position: fixed;
  left: 50%;
  transform: translateX(-50%);
  top: -90px;
  z-index: 10000;
  padding: 10px;
  margin: 2px;
  transition: top .2s;

  &:focus {
    left: 50%;
    top: 10px;
  }
}

@media print {
  .skip-content {
    display: none;
  }
}

.linenumber {
  display: inline-block !important;
  color: var(--codeBlockLinesNumbersColor) !important;
  font-style: normal !important;
  text-align: left !important;
  min-width: 50px !important;
}

@include medium {
  .linenumber {
    min-width: 40px !important;
  }
}

.noMarginLeft {
  margin-left: 0 !important;
}

.noMarginRight {
  margin-right: 0 !important;
}

.noPaddingLeft {
  padding-left: 0 !important;
}

.noPaddingRight {
  padding-right: 0 !important;
}

.toolTip {
  display: inline-block;
  position: absolute;
  width: max-content;
  background-color: var(--tooltip-bg-color);
  border-radius: 5px;
  padding: 6px 8px;
  user-select: none;
  opacity: 0;
  pointer-events: none;
  transition: opacity .1s ease;
}

